--- a/nanoplm/templates/create-component-instance.html
+++ b/nanoplm/templates/create-component-instance.html
@@ -9,7 +9,7 @@
     <table>
         <tr>
             <td>{{ form.component.label(style="padding-right: 10px;") }}</td>
-            <td>{{ form.component(autocomplete="off") }}</td>
+            <td>{{ form.component(autocomplete="off", value=component_uuid) }}</td>
         </tr>
         <tr>
             <td>{{ form.client.label(style="padding-right: 10px;") }}</td>
