--- a/nanoplm/templates/all-component-instances.html
+++ b/nanoplm/templates/all-component-instances.html
@@ -21,7 +21,7 @@
     {% for component_instance in component_instances %}
     <tr>
         <td>{{ component_instance.component }}</td>
-        <td><a href="{{ url_for('read_component_instance', component_instance_uuid = component_instance.uuid) }}">{{ component_instance.serial_number }}</a></td>
+        <td>{{ component_instance.serial_number }}</td>
         <td>{{ component_instance.uuid }}</td>
         <td>{{ component_instance.date_created }}</td>
         <td>{{ component_instance.client }}</td>
