--- a/nanoplm/templates/read-component.html
+++ b/nanoplm/templates/read-component.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <a type="button" class="btn btn-outline-dark mb-3" href="{{ url_for('all_components') }}">< Alle Komponenten</a> 
+<p>Komponente</p>
 <h1 class="mb-3">{{ component.name }}</h1>
 <div class="mb-2">
     <nobr>
@@ -39,5 +40,64 @@
             <td>{{ component.date_created }}</td>
         </tr>
     </tbody>
-</table>   
+</table>  
+<h2 class="pt-3">Instanzen</h2> 
+<p class="mb-2">Es wurden {{ len(component_instances) }} Instanzen gefunden.</p>
+<table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
+    <thead>
+        <tr>
+            <th>Komponente</th>
+            <th>Seriennummer</th>
+            <th>UUID</th>
+            <th>Erstellungsdatum</th>
+            <th>Kunde</th>
+            <th>Aktionen</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for component_instance in component_instances %}
+    <tr>
+        <td>{{ component_instance.component }}</td>
+        <td>{{ component_instance.serial_number }}</td>
+        <td>{{ component_instance.uuid }}</td>
+        <td>{{ component_instance.date_created }}</td>
+        <td>{{ component_instance.client }}</td>
+        <td>
+            <nobr>
+                <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-eye"></i></a>
+                <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-x-lg"></i></a>
+            </nobr>
+        </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+<h2 class="pt-3">Kunden</h2>
+<p class="mb-2">Es wurden {{ len(clients) }} Kunden gefunden.</p>
+<table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>UUID</th>
+            <th>Erstellungsdatum</th>
+            <th>Aktionen</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for client in clients %}
+        <tr>
+            <td>{{ client.name }}</td>
+            <td>{{ client.uuid }}</td>
+            <td>{{ client.date_created }}</td>
+            <td>
+                <nobr>
+                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_client', client_uuid = client.uuid) }}"><i class="bi-eye"></i></a>
+                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_client', client_uuid = client.uuid) }}"><i class="bi-pencil"></i></a>
+                    <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_client', client_uuid = client.uuid) }}"><i class="bi-x-lg"></i></a>
+                </nobr>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock content %}
