--- a/nanoplm/templates/update-component-instance.html
+++ b/nanoplm/templates/update-component-instance.html
@@ -12,12 +12,12 @@
             <td>{{ component_instance.uuid }}</td>
         </tr>
         <tr>
-            <td>{{ form.component.label(style="padding-right: 10px;") }}</td>
-            <td>{{ form.component(autocomplete="off", value=component_instance.component) }}</td>
+            <td>{{ form.component_uuid.label(style="padding-right: 10px;") }}</td>
+            <td>{{ form.component_uuid(autocomplete="off", value=component_instance.component) }}</td>
         </tr>
         <tr>
-            <td>{{ form.client.label(style="padding-right: 10px;") }}</td>
-            <td>{{ form.client(autocomplete="off", value=component_instance.client) }}</td>
+            <td>{{ form.client_uuid.label(style="padding-right: 10px;") }}</td>
+            <td>{{ form.client_uuid(autocomplete="off", value=component_instance.client) }}</td>
         </tr>
         <tr>
             <td>Seriennummer</td>
