--- a/nanoplm/templates/read-component-instance.html
+++ b/nanoplm/templates/read-component-instance.html
@@ -4,10 +4,11 @@
 
 {% block content %}
 <a type="button" class="btn btn-outline-dark mb-3" href="{{ url_for('all_component_instances') }}">< Alle Instanzen</a> 
+<p>Instanz</p>
 <h1 class="mb-3">{{ component_instance.component }}: {{ component_instance.serial_number }}</h1>
 <div class="mb-2">
     <nobr>
-        <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-pencil" style="padding-right: 6px;"></i>Bearbeiten</a>
+        <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_component', component_uuid = component_instance.component) }}"><i class="bi-eye" style="padding-right: 6px;"></i>Komponente öffnen</a>
         <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-x-lg" style="padding-right: 6px;"></i>Löschen</a>
     </nobr>
 </div>
