--- a/nanoplm/templates/create-component.html
+++ b/nanoplm/templates/create-component.html
@@ -16,6 +16,10 @@
             <td>{{ form.description(autocomplete="off") }}</td>
         </tr>
         <tr>
+            <td>{{ form.component_number.label(style="padding-right: 10px;") }}</td>
+            <td>{{ form.component_number }}</td>
+        </tr>
+        <tr>
             <td></td>
             <td style="padding-top: 2rem;">{{ form.submit(style="min-width:100%;") }}</td>
         </tr>
