--- a/nanoplm/templates/all-clients.html
+++ b/nanoplm/templates/all-clients.html
@@ -23,7 +23,7 @@
             <td>{{ client.date_created }}</td>
             <td>
                 <nobr>
-                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_client', client_uuid = client.uuid) }}"><i class="bi-eye"></i></a>
+                    <a class="btn btn-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_client', client_uuid = client.uuid) }}"><i class="bi-eye"></i></a>
                     <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_client', client_uuid = client.uuid) }}"><i class="bi-pencil"></i></a>
                     <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_client', client_uuid = client.uuid) }}"><i class="bi-x-lg"></i></a>
                 </nobr>
