--- a/nanoplm/templates/read-component.html
+++ b/nanoplm/templates/read-component.html
@@ -5,43 +5,56 @@
 {% block content %}
 <a type="button" class="btn btn-outline-dark mb-3" href="{{ url_for('all_components') }}">< Alle Komponenten</a> 
 <p>Komponente</p>
-<h1 class="mb-3">{{ component.name }}</h1>
-<div class="mb-2">
+<div class="row mb-5">
+    <div class="col-4">
+        <iframe style="min-width: 100%; min-height: max(100%, 400px);" src="https://www.fcviewer.com/viewer/2fd11cff-3bb6-4bf8-bfaf-ba13d13f5330" frameborder="1"></iframe>
+    </div>
+    <div class="col-8">
+        <h1 class="mb-3">{{ component.name }}</h1>
+        <div class="mb-2">
+            <nobr>
+                <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_component', component_uuid = component.uuid) }}"><i class="bi-pencil" style="padding-right: 6px;"></i>Bearbeiten</a>
+                <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_component', component_uuid = component.uuid) }}"><i class="bi-x-lg" style="padding-right: 6px;"></i>Löschen</a>
+            </nobr>
+        </div>
+        <table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
+            <tbody>
+                <tr>
+                    <td>UUID</td>
+                    <td>{{ component.uuid }}</td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td>{{ component.name }}</td>
+                </tr>
+                <tr>
+                    <td>Beschreibung</td>
+                    <td>{{ component.description }}</td>
+                </tr>
+                <tr>
+                    <td>Nummer</td>
+                    <td>{{ component.component_number }}</td>
+                </tr>
+                <tr>
+                    <td>Status</td>
+                    <td>{{ component.status }}</td>
+                </tr>
+                <tr>
+                    <td>Erstellungsdatum</td>
+                    <td>{{ component.date_created }}</td>
+                </tr>
+            </tbody>
+        </table>  
+    </div>
+    
+</div>
+
+<h2 class="pt-4">Instanzen</h2> 
+<div class="pt-3 mb-2">
     <nobr>
         <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('create_component_instance', component_uuid = component.uuid) }}"><i class="bi-plus-lg" style="padding-right: 6px;"></i>Instanz hinzufügen</a>
-        <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_component', component_uuid = component.uuid) }}"><i class="bi-pencil" style="padding-right: 6px;"></i>Bearbeiten</a>
-        <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_component', component_uuid = component.uuid) }}"><i class="bi-x-lg" style="padding-right: 6px;"></i>Löschen</a>
     </nobr>
 </div>
-<table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
-    <tbody>
-        <tr>
-            <td>UUID</td>
-            <td>{{ component.uuid }}</td>
-        </tr>
-        <tr>
-            <td>Name</td>
-            <td>{{ component.name }}</td>
-        </tr>
-        <tr>
-            <td>Beschreibung</td>
-            <td>{{ component.description }}</td>
-        </tr>
-        <tr>
-            <td>Nummer</td>
-            <td>{{ component.component_number }}</td>
-        </tr>
-        <tr>
-            <td>Status</td>
-            <td>{{ component.status }}</td>
-        </tr>
-        <tr>
-            <td>Erstellungsdatum</td>
-            <td>{{ component.date_created }}</td>
-        </tr>
-    </tbody>
-</table>  
-<h2 class="pt-3">Instanzen</h2> 
 <p class="mb-2">Es wurden {{ len(component_instances) }} Instanzen gefunden.</p>
 <table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
     <thead>
@@ -64,7 +77,7 @@
         <td>{{ component_instance.client }}</td>
         <td>
             <nobr>
-                <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-eye"></i></a>
+                <a class="btn btn-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-eye"></i></a>
                 <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-x-lg"></i></a>
             </nobr>
         </td>
@@ -73,7 +86,7 @@
     </tbody>
 </table>
 
-<h2 class="pt-3">Kunden</h2>
+<h2 class="pt-4">Kunden</h2>
 <p class="mb-2">Es wurden {{ len(clients) }} Kunden gefunden.</p>
 <table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
     <thead>
@@ -92,7 +105,7 @@
             <td>{{ client.date_created }}</td>
             <td>
                 <nobr>
-                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_client', client_uuid = client.uuid) }}"><i class="bi-eye"></i></a>
+                    <a class="btn btn-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_client', client_uuid = client.uuid) }}"><i class="bi-eye"></i></a>
                     <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_client', client_uuid = client.uuid) }}"><i class="bi-pencil"></i></a>
                     <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_client', client_uuid = client.uuid) }}"><i class="bi-x-lg"></i></a>
                 </nobr>
@@ -102,7 +115,12 @@
     </tbody>
 </table>
 
-<h2 class="pt-3">Dateien</h2>
+<h2 class="pt-4">Dateien</h2>
+<div class="pt-3 mb-2">
+    <nobr>
+        <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('create_file') }}"><i class="bi-plus-lg" style="padding-right: 6px;"></i>Datei hinzufügen</a>
+    </nobr>
+</div>
 <p class="mb-2">Es wurden {{ len(files) }} Dateien gefunden.</p>
 <table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
     <thead>
@@ -121,7 +139,7 @@
             <td>{{ file.date_created }}</td>
             <td>
                 <nobr>
-                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_file', file_uuid = file.uuid) }}"><i class="bi-eye"></i></a>
+                    <a class="btn btn-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_file', file_uuid = file.uuid) }}"><i class="bi-eye"></i></a>
                     <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_file', file_uuid = file.uuid) }}"><i class="bi-pencil"></i></a>
                     <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_file', file_uuid = file.uuid) }}"><i class="bi-x-lg"></i></a>
                 </nobr>
