--- a/nanoplm/templates/all-component-instances.html
+++ b/nanoplm/templates/all-component-instances.html
@@ -27,7 +27,7 @@
         <td>{{ component_instance.client }}</td>
         <td>
             <nobr>
-                <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-eye"></i></a>
+                <a class="btn btn-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-eye"></i></a>
                 <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_component_instance', component_instance_uuid = component_instance.uuid) }}"><i class="bi-x-lg"></i></a>
             </nobr>
         </td>
