--- a/nanoplm/templates/all-files.html
+++ b/nanoplm/templates/all-files.html
@@ -23,7 +23,7 @@
             <td>{{ file.date_created }}</td>
             <td>
                 <nobr>
-                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_file', file_uuid = file.uuid) }}"><i class="bi-eye"></i></a>
+                    <a class="btn btn-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_file', file_uuid = file.uuid) }}"><i class="bi-eye"></i></a>
                     <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_file', file_uuid = file.uuid) }}"><i class="bi-pencil"></i></a>
                     <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_file', file_uuid = file.uuid) }}"><i class="bi-x-lg"></i></a>
                 </nobr>
