--- a/nanoplm/templates/read-component.html
+++ b/nanoplm/templates/read-component.html
@@ -4,12 +4,13 @@
 
 {% block content %}
 <a type="button" class="btn btn-outline-dark mb-3" href="{{ url_for('all_components') }}">< Alle Komponenten</a> 
-<p>Komponente</p>
-<div class="row mb-5">
+
+<div class="row mt-3">
     <div class="col-4">
         <iframe style="min-width: 100%; min-height: max(100%, 400px);" src="https://www.fcviewer.com/viewer/2fd11cff-3bb6-4bf8-bfaf-ba13d13f5330" frameborder="1"></iframe>
     </div>
     <div class="col-8">
+        <p>Komponente</p>
         <h1 class="mb-3">{{ component.name }}</h1>
         <div class="mb-2">
             <nobr>
@@ -49,7 +50,7 @@
     
 </div>
 
-<h2 class="pt-4">Instanzen</h2> 
+<h2 class="pt-5">Instanzen</h2> 
 <div class="pt-3 mb-2">
     <nobr>
         <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('create_component_instance', component_uuid = component.uuid) }}"><i class="bi-plus-lg" style="padding-right: 6px;"></i>Instanz hinzufügen</a>
